--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div>
-      <h1>Welcome to TEAM 3's app</h1>
+      <h1>Welcome to the TEAM 3 app</h1>
     {{{body}}}
 </div>
 <div>
